Network and default boot changes
boot into hotspot mode
more deps for bluetooth
added stagepi cli based on the local api for status and configurations
version bump

Signed-off-by: Shai Taharlev <stagepi@bama-box.com>

--- a/stagepi-package/DEBIAN/control
+++ b/stagepi-package/DEBIAN/control
@@ -5,6 +5,7 @@ Priority: optional
 Architecture: all
 Depends: shairport-sync,
  bluez,
+ bluez-tools,
  python3,
  python3-netifaces,
  python3-flask,
@@ -12,6 +13,9 @@ Depends: shairport-sync,
  python3-psutil,
  python3-libconf,
  python3-pydbus,
+ python3-bleak,
+ python3-bluez,
+ python3-dbus-next,
  pipewire,
  pipewire-audio,
  pipewire-pulse,
@@ -27,7 +31,8 @@ Depends: shairport-sync,
  gstreamer1.0-libav,
  psutils,
  dhcpcd5,
- uvicorn
+ uvicorn,
+ jq
 Maintainer: Shai Taharlev <stagepi@bama-box.com>
 Description: StagePi - your DIY stagebox for audio routing and control.
  Designed for musicians, engineers, and tinkerers.
