New release: with UI on port 8000
- Added a preact based UI on port 8000
- removed the old UI on port 5001
- api updates
- aes67 service
- auto detection of the sound hardware api and ui

Signed-off-by: Shai Taharlev <stagepi@bama-box.com>

--- a/stagepi-package/usr/local/stagepi/installer-files/etc/systemd/system/stagepi-aes67.service
+++ b/stagepi-package/usr/local/stagepi/installer-files/etc/systemd/system/stagepi-aes67.service
@@ -14,18 +14,11 @@
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
 [Unit]
-Description=StagePI API endpoint
-After=network.target
+Description=Start AES67 service
 
 [Service]
-StandardOutput=journal
-StandardError=journal
-Restart=on-failure
-User=pi
-WorkingDirectory=/usr/local/stagepi/be/
-ExecStart=/usr/bin/uvicorn main:app --reload --host 0.0.0.0 --port 8000
+ExecStart=/usr/local/bin/start-aes67.sh
 Restart=always
-Environment=PYTHONUNBUFFERED=1
 
 [Install]
 WantedBy=multi-user.target
