--- a/src/backend/Makefile
+++ b/src/backend/Makefile
@@ -16,6 +16,7 @@ install:
 	pip install -r requirements.txt
 
 install-dev:
+	pip install -r requirements.txt
 	pip install -r requirements-dev.txt
 
 test:
