feat: Add Docker ARM64 development environment and deployment configuration
This commit establishes a clean, Docker-based development workflow for StagePi:

Development Changes:
- Add Docker ARM64 container for development and testing
- Matches Raspberry Pi environment exactly with all GStreamer dependencies
- All development happens in Docker (no WSL complexity)
- Backend Makefile with commands: test, lint, format, docker-shell
- Local deployment configuration via Makefile.local (not tracked)

Deployment Changes:
- Raspberry Pi uses Debian system packages only (no pip/uv)
- Configured production target: pi@192.168.1.100 in Makefile.local
- Updated DEBIAN/control to use system python3-fastapi, uvicorn
- Removed pip/uv installation from postinst script
- Simplified build.sh to copy Python source files directly

Documentation:
- Add comprehensive GETTING_STARTED.md with Docker workflow
- Documents testing, linting, formatting, and deployment
- Clear separation: Docker for dev, Debian packages for production"

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ private
 pi-gen
 node_modules
 package
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.egg-info/
+.pytest_cache/
+.coverage
+htmlcov/
+.venv/
+venv/
+
+# Docker
+Dockerfile.dev
+
+# Local development configuration
+Makefile.local
+*.local
