--- a/src/backend/pytest.ini
+++ b/src/backend/pytest.ini
@@ -9,16 +9,11 @@ python_functions = test_*
 # Directories to search for tests
 testpaths = tests
 
-# Add verbose output
+# Add verbose output (coverage flags removed - add via command line or Makefile)
 addopts =
     -v
     --strict-markers
     --tb=short
-    --cov=.
-    --cov-report=term-missing
-    --cov-report=html
-    --cov-report=xml
-    --cov-config=.coveragerc
 
 # Markers for categorizing tests
 markers =
