--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -1,3 +1,41 @@
+[project]
+name = "stagepi-backend"
+version = "1.0.0"
+description = "StagePi Backend API - Open source stagebox firmware"
+readme = "../../README.md"
+requires-python = ">=3.9"
+license = {text = "GPL-3.0"}
+authors = [
+    {name = "Bama Box ltd."}
+]
+
+dependencies = [
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "pydantic>=2.5.3",
+    "python-multipart>=0.0.6",
+    "libconf>=2.0.1",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.3",
+    "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.21.1",
+    "pytest-mock>=3.12.0",
+    "httpx>=0.25.2",
+    "ruff>=0.1.9",
+    "mypy>=1.7.1",
+    "coverage[toml]>=7.3.4",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["api", "core"]
+
 [tool.ruff]
 # Ruff configuration - replaces black, flake8, and isort
 line-length = 127
