--- a/src/stagepi-package/usr/local/stagepi/installer-files/etc/supervisor/conf.d/stagepi.conf
+++ b/src/stagepi-package/usr/local/stagepi/installer-files/etc/supervisor/conf.d/stagepi.conf
@@ -8,23 +8,19 @@
 # This program is distributed in the hope that it will be useful,
 #but WITHOUT ANY WARRANTY; without even the implied warranty of
 #MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-#GNU General Public License for more details.
+# GNU General Public License for more details.
 
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
-[Unit]
-Description=StagePI API endpoint
-After=network.target
-
-[Service]
-StandardOutput=journal
-StandardError=journal
-User=pi
-WorkingDirectory=/usr/local/stagepi/ui/
-ExecStart=/usr/bin/uvicorn main:app --reload --host 0.0.0.0 --port 8000
-Environment=PYTHONUNBUFFERED=1 
-Restart=always
-
-[Install]
-WantedBy=multi-user.target
+[program:stagepi-backend]
+command=/usr/bin/uvicorn main:app --host 0.0.0.0 --port 8000
+directory=/usr/local/stagepi/ui
+user=pi
+autostart=true
+autorestart=true
+startsecs=10
+startretries=3
+stdout_logfile=/var/log/supervisor/stagepi-backend.log
+stderr_logfile=/var/log/supervisor/stagepi-backend-error.log
+environment=PYTHONUNBUFFERED="1"
