--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -8,6 +8,6 @@ pydantic==2.5.3
 # CORS middleware
 python-multipart==0.0.6
 
-# GStreamer Python bindings (system package, but listed for reference)
-# Install via: sudo apt-get install python3-gi gir1.2-gstreamer-1.0
-# PyGObject>=3.42.0
+# GStreamer CLI tools (system package, managed via supervisor)
+# Install via: sudo apt-get install gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-alsa
+# Streams are managed as individual supervisor programs using gst-launch-1.0
